--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Roboto", sans-serif;
-    background: #fff;
-    color: #2e2f42;
+    background-color: #fff;
+    color: #434455
+  
 }
 ul {
     list-style-type: none;
@@ -9,24 +10,19 @@ ul {
 a {
     text-decoration:none;
 }
-p {
-font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
+
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
         font-size: 18px;
-        line-height: 1.16667;
+        line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #2e2f42;
+color: #4d5ae5;
 }
 .accent-logo {
-    color: #4d5ae5;
+    color: #2e2f42;
 }
 .accent-logo2 {
     color: #f4f4fd;
@@ -48,6 +44,7 @@ font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #434455;
+        font-style: normal;
 }
 .contacts .link:focus,
 .contacts .link:hover{
@@ -56,10 +53,10 @@ font-weight: 400;
 .main-background {
     background: #2e2f42;
 }
-h1 {
+.main-title {
     font-weight: 700;
         font-size: 56px;
-        line-height: 1.07143;
+        line-height: 1.07;
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
@@ -73,53 +70,84 @@ h1 {
         color: #fff;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
             background: #4d5ae5;
-}
-button {
     cursor: pointer;
 }
-
+.text-button:hover,
+.text-button:focus {
+    background: #404bbf;
+}
+.section-benefits .name {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
        
 
 .section-benefits .text {
   
         color: #434455;
 }
-h2 {
-    font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11111;
-        letter-spacing: 0.02em;
-        text-align: center;
-        
-}
-h3 {
-    font-weight: 500;
-        font-size: 20px;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-}
+
+    
+
 .section-team {
+    background: #f4f4fd;
+}
+.title-team {
+font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    text-transform: capitalize;
+}
+.list-team {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-        background: #fff;
+    background-color: #FFFFFF
        
 }
-.section-team .name {
+.list-team .name {
   
         text-align: center;
        
 }
-.section-team .text-name {
+.list-team .text-name {
 text-align: center;
         
+}
+.title-portfolio {
+    font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+        text-transform: capitalize;
 }
 .portfolio {
     background: #fff;
 }
-
-footer {
+.portfolio .name {
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+.portfolio .text {
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+}
+.footer {
     background: #2e2f42;
 }
-.text-footer {
+.footer .text-footer {
 
     color: #f4f4fd;
 }
