--- a/css/styles.css
+++ b/css/styles.css
@@ -118,12 +118,23 @@ font-weight: 700;
        
 }
 .list-team .name {
-  
+font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
         text-align: center;
        
 }
 .list-team .text-name {
-text-align: center;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #434455;
+
         
 }
 .title-portfolio {
